change ==None to is None in test template for pep8

--- a/templates/test.tmpl
+++ b/templates/test.tmpl
@@ -44,7 +44,7 @@ Uncomment below
 
 @pytest.mark.parametrize('item', parsed_items)
 # def test_classification(item):
-    # assert item['classification'] == None
+    # assert item['classification'] is None
 
 
 @pytest.mark.parametrize('item', parsed_items)
