--- a/templates/spider.tmpl
+++ b/templates/spider.tmpl
@@ -10,16 +10,8 @@ from datetime import datetime
 
 class {{ classname }}(scrapy.Spider):
     name = '{{ name }}'
-    allowed_domains = ['{{ domain.split('://')[-1] }}']
-    start_urls = [
-    {%- if start_urls %}
-        {%- for url in start_urls.split(',') %}
-        '{{ url.split('://')[-1] }}'{{ ',' if not loop.last }}
-        {%- endfor %}
-    {%- else %}
-        '{{ domain.split('://')[-1] }}'
-    {%- endif %}
-    ]
+    allowed_domains = [{{ domains|quote_list|join(', ') }}]
+    start_urls = [{{ start_urls|quote_list|join(', ') }}]
 
     def parse(self, response):
         """
