--- a/templates/test.tmpl
+++ b/templates/test.tmpl
@@ -37,17 +37,17 @@ Uncomment below
     # assert parsed_items[0]['id'] == 'EXPECTED ID'
 
 
-@pytest.mark.parametrize('item', parsed_items)
+# @pytest.mark.parametrize('item', parsed_items)
 # def test_all_day(item):
     # assert item['all_day'] is False
 
 
-@pytest.mark.parametrize('item', parsed_items)
+# @pytest.mark.parametrize('item', parsed_items)
 # def test_classification(item):
     # assert item['classification'] is None
 
 
-@pytest.mark.parametrize('item', parsed_items)
+# @pytest.mark.parametrize('item', parsed_items)
 # def test_status(item):
     # assert item['status'] == 'tentative'
 
@@ -62,7 +62,6 @@ Uncomment below
         # },
     # }
 
-@pytest.mark.parametrize('item', parsed_items)
+# @pytest.mark.parametrize('item', parsed_items)
 # def test__type(item):
     # assert parsed_items[0]['_type'] == 'event'
-
