--- a/templates/spider.tmpl
+++ b/templates/spider.tmpl
@@ -10,6 +10,7 @@ from datetime import datetime
 
 class {{ classname }}(scrapy.Spider):
     name = '{{ name }}'
+    long_name = '{{ long_name }}'
     allowed_domains = [{{ domains|quote_list|join(', ') }}]
     start_urls = [{{ start_urls|quote_list|join(', ') }}]
 
