--- a/templates/spider.tmpl
+++ b/templates/spider.tmpl
@@ -1,11 +1,5 @@
 # -*- coding: utf-8 -*-
-"""
-All spiders should yield data shaped according to the Open Civic Data
-specification (http://docs.opencivicdata.org/en/latest/data/event.html).
-"""
 import scrapy
-
-from datetime import datetime
 
 
 class {{ classname }}(scrapy.Spider):
@@ -16,8 +10,8 @@ class {{ classname }}(scrapy.Spider):
 
     def parse(self, response):
         """
-        `parse` should always `yield` a dict that follows the `Open Civic Data
-        event standard <http://docs.opencivicdata.org/en/latest/data/event.html>`_.
+        `parse` should always `yield` a dict that follows the Event Schema
+        <https://city-bureau.gitbooks.io/documenters-event-aggregator/event-schema.html>.
 
         Change the `_parse_id`, `_parse_name`, etc methods to fit your scraping
         needs.
@@ -31,9 +25,10 @@ class {{ classname }}(scrapy.Spider):
                 'classification': self._parse_classification(item),
                 'start_time': self._parse_start(item),
                 'end_time': self._parse_end(item),
+                'timezone': self._parse_timezone(item),
                 'all_day': self._parse_all_day(item),
-                'status': self._parse_status(item),
                 'location': self._parse_location(item),
+                'sources': self._parse_sources(item),
             }
 
         # self._parse_next(response) yields more responses to parse if necessary.
@@ -50,48 +45,13 @@ class {{ classname }}(scrapy.Spider):
 
     def _parse_id(self, item):
         """
-        Calulate ID. ID must be unique within the data source being scraped.
+        Calulate ID. ID must be unique and in the following format:
+        <spider-name>/<start-time-in-YYYYMMddhhmm>/<unique-identifier>/<underscored-event-name>
+
+        Example:
+        chi_buildings/201710161230/2176/daley_plaza_italian_exhibit
         """
         return None
-
-    def _parse_classification(self, item):
-        """
-        Parse or generate classification (e.g. town hall).
-        """
-        return 'Not classified'
-
-    def _parse_status(self, item):
-        """
-        Parse or generate status of meeting. Can be one of:
-
-        * cancelled
-        * tentative
-        * confirmed
-        * passed
-
-        By default, return "tentative"
-        """
-        return 'tentative'
-
-    def _parse_location(self, item):
-        """
-        Parse or generate location. Url, latitude and longitude are all
-        optional and may be more trouble than they're worth to collect.
-        """
-        return {
-            'url': None,
-            'name': None,
-            'coordinates': {
-                'latitude': None,
-                'longitude': None,
-            },
-        }
-
-    def _parse_all_day(self, item):
-        """
-        Parse or generate all-day status. Defaults to false.
-        """
-        return False
 
     def _parse_name(self, item):
         """
@@ -105,6 +65,12 @@ class {{ classname }}(scrapy.Spider):
         """
         return None
 
+    def _parse_classification(self, item):
+        """
+        Parse or generate classification (e.g. public health, education, etc).
+        """
+        return 'Not classified'
+
     def _parse_start(self, item):
         """
         Parse start date and time.
@@ -116,4 +82,39 @@ class {{ classname }}(scrapy.Spider):
         Parse end date and time.
         """
         return None
+
+    def _parse_timezone(self, item):
+        """
+        Parse or generate timzone in tzinfo format.
+        """
+        return 'America/Chicago'
+
+    def _parse_all_day(self, item):
+        """
+        Parse or generate all-day status. Defaults to False.
+        """
+        return False
+
+    def _parse_location(self, item):
+        """
+        Parse or generate location. Latitude and longitude can be
+        left blank and will be geocoded later.
+        """
+        return {
+            'url': '',
+            'name': '',
+            'coordinates': {
+                'latitude': '',
+                'longitude': '',
+            },
+        }
+
+    def _parse_sources(self, item):
+        """
+        Parse or generate sources.
+        """
+        return [{
+            'url': '',
+            'note': '',
+        }]
 
