--- a/templates/test.tmpl
+++ b/templates/test.tmpl
@@ -3,6 +3,7 @@ import pytest
 from tests.utils import file_response
 from documenters_aggregator.spiders.{{ name }} import {{ classname }}
 
+
 def test_tests():
     print('Please write some tests for this spider or at least disable this one.')
     assert False
@@ -37,6 +38,29 @@ Uncomment below
     # assert parsed_items[0]['id'] == 'EXPECTED ID'
 
 
+# def test_location():
+    # assert parsed_items[0]['location'] == {
+        # 'url': 'EXPECTED URL',
+        # 'name': 'EXPECTED NAME',
+        # 'coordinates': {
+            # 'latitude': 'EXPECTED LATITUDE',
+            # 'longitude': 'EXPECTED LONGITUDE',
+        # },
+    # }
+
+
+# def test_sources():
+    # assert parsed_items[0]['sources'] == {
+        # 'url': 'EXPECTED URL',
+        # 'note': 'EXPECTED NOTE'
+    # }
+
+
+# @pytest.mark.parametrize('item', parsed_items)
+# def test_timezone(item):
+    # assert item['timezone'] == 'EXPECTED TIMEZONE'
+
+
 # @pytest.mark.parametrize('item', parsed_items)
 # def test_all_day(item):
     # assert item['all_day'] is False
@@ -48,20 +72,6 @@ Uncomment below
 
 
 # @pytest.mark.parametrize('item', parsed_items)
-# def test_status(item):
-    # assert item['status'] == 'tentative'
-
-
-# def test_location():
-    # assert parsed_items[0]['location'] == {
-        # 'url': 'EXPECTED URL',
-        # 'name': 'EXPECTED NAME',
-        # 'coordinates': {
-            # 'latitude': 'EXPECTED LATITUDE',
-            # 'longitude': 'EXPECTED LONGITUDE',
-        # },
-    # }
-
-# @pytest.mark.parametrize('item', parsed_items)
 # def test__type(item):
     # assert parsed_items[0]['_type'] == 'event'
+
