align templates with events schema

--- a/templates/spider.tmpl
+++ b/templates/spider.tmpl
@@ -103,6 +103,7 @@ class {{ classname }}(scrapy.Spider):
         return {
             'url': '',
             'name': '',
+            'address': '',
             'coordinates': {
                 'latitude': '',
                 'longitude': '',
