--- a/templates/test.tmpl
+++ b/templates/test.tmpl
@@ -42,6 +42,7 @@ Uncomment below
     # assert parsed_items[0]['location'] == {
         # 'url': 'EXPECTED URL',
         # 'name': 'EXPECTED NAME',
+        # 'address': 'EXPECTED ADDRESS'
         # 'coordinates': {
             # 'latitude': 'EXPECTED LATITUDE',
             # 'longitude': 'EXPECTED LONGITUDE',
