--- a/templates/test.tmpl
+++ b/templates/test.tmpl
@@ -1,7 +1,7 @@
 import pytest
 
 from tests.utils import file_response
-from documenters_aggregator.spiders.{{ name }} import {{ classname }}
+from city_scrapers.spiders.{{ name }} import {{ classname }}
 
 
 def test_tests():
