Issue 310 - fix typo in spider.tmpl

--- a/templates/spider.tmpl
+++ b/templates/spider.tmpl
@@ -68,7 +68,7 @@ class {{ classname }}(Spider):
 
     def _parse_description(self, item):
         """
-        Parse or generate event name.
+        Parse or generate event description.
         """
         return ''
 
