--- a/templates/test.tmpl
+++ b/templates/test.tmpl
@@ -23,7 +23,7 @@ Uncomment below
 
 
 # def test_description():
-    # assert parsed_items[0]['description'] == 'EXPECTED DESCRIPTION'
+    # assert parsed_items[0]['event_description'] == 'EXPECTED DESCRIPTION'
 
 
 # def test_start():
