--- a/docs/_sass/styles.scss
+++ b/docs/_sass/styles.scss
@@ -2,16 +2,17 @@
   font-size: 13px;
 }
 
-.page__content p, .page__content li, .page__content dl {
-  font-size: 14px;
+.page__content p,
+.page__content li,
+.page__content dl {
+  font-size: 16px;
 }
 
 .greedy-nav a {
   margin: 0 0.5rem;
 }
 
-.page__subtitle {
-  margin-top: 0.5em;
-  color: #fff;
-  text-shadow: 1px 1px 4px rgba(0,0,0,0.5);
+.page__hero--overlay .page__title {
+  color: #000;
+  text-shadow: none;
 }
