--- a/docs/_sass/styles.scss
+++ b/docs/_sass/styles.scss
@@ -16,3 +16,73 @@
   color: #000;
   text-shadow: none;
 }
+
+footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+form.newsletter {
+  max-width: 450px;
+  background-color: transparent;
+  padding: 0;
+  order: 2;
+
+  .field {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 12px;
+  }
+
+  p,
+  .input,
+  .btn {
+    height: 35px;
+    font-size: 14px;
+  }
+
+  p {
+    margin: 0;
+    line-height: 1.25;
+    display: inline-block;
+  }
+
+  .input {
+    margin: 0;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    color: #000;
+    font-weight: normal;
+    width: auto;
+    flex-grow: 1;
+  }
+
+  .btn {
+    border: solid 1px #fff;
+    background-color: #000;
+    color: #fff;
+    margin: 0;
+    line-height: 1;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+
+    &:hover,
+    &:active {
+      color: red;
+    }
+  }
+}
+
+@media screen and (max-width: 700px) {
+  footer {
+    flex-direction: column;
+  }
+  form.newsletter {
+    order: 1;
+  }
+  .theme-footer {
+    order: 2;
+  }
+}
